--- a/index.njk
+++ b/index.njk
@@ -1,4 +1,4 @@
-{% extends "src/_includes/default.njk" %}
+{% extends "_includes/default.njk" %}
 {% block title %}Jocarifeta{% endblock %}
 {% block content %}
   <div class="container p-4">
