feat(index): add footer

--- a/index.njk
+++ b/index.njk
@@ -7,7 +7,7 @@ pagination:
 {% extends "_includes/default.njk" %}
 {% block title %}Jocarifeta{% endblock %}
 {% block content %}
-  <div class="max-w-screen-sm mx-auto">
+  <div class="max-w-screen-sm mx-auto pb-12">
     {% for article in pagination.items %}
       <h1>{{ article.title }}</h1>
       <p>By
@@ -15,7 +15,13 @@ pagination:
         –
         <span>{{ article.created | dayjs }}</span>
       </p>
-      <a href="blog/{{ article.slug }}">Read article</a>
+      <p class="py-4 whitespace-pre-line">{{ article.content }}</p>
+      <div class="text-right">
+        <a href="blog/{{ article.slug }}">Read article</a>
+      </div>
     {% endfor %}
+  </div>
+  <div class="absolute bottom-0 w-full bg-yellow h-12 container flex items-center justify-center">
+    <p>you’ve reached the end of my journey…</p>
   </div>
 {% endblock %}
