--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -16,7 +16,7 @@
     <script src="/js/alpine.js?v={% version %}"></script>
   </head>
   <body>
-    <div class="container mx-auto">
+    <div class="container mx-auto min-h-screen relative font-body">
       {% block content %}
         {{ content | safe }}
       {% endblock %}
