--- a/index.njk
+++ b/index.njk
@@ -7,7 +7,7 @@ pagination:
 {% extends "_includes/default.njk" %}
 {% block title %}Jocarifeta{% endblock %}
 {% block content %}
-  <div class="max-w-screen-sm mx-auto pb-12">
+  <div class="max-w-screen-sm mx-auto pb-12 relative">
     {% for article in pagination.items %}
       <div class="my-12 {{ 'text-right' if article.isPoem }}">
         <h1>{{ article.title }}</h1>
@@ -25,8 +25,8 @@ pagination:
       </div>
       {{ article | consoleDump }}
     {% endfor %}
-  </div>
-  <div class="absolute bottom-0 w-full bg-yellow h-12 container flex items-center justify-center">
-    <p>you’ve reached the end of my journey…</p>
+    <div class="absolute bottom-0 max-w-full bg-yellow h-12 container flex items-center justify-center">
+      <p>you’ve reached the end of my journey…</p>
+    </div>
   </div>
 {% endblock %}
