fix(default): fix Google Fonts link

--- a/index.njk
+++ b/index.njk
@@ -27,6 +27,6 @@ description: A blog where I write whatever passes through my mind...
     {% endfor %}
   </div>
   <div class="absolute bottom-0 max-w-full bg-yellow h-12 container flex items-center justify-center">
-    <p>you’ve reached the end of my journey…</p>
+    <p class="mb-0">you’ve reached the end of my journey…</p>
   </div>
 {% endblock %}
