--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -10,7 +10,7 @@
     {% endif %}
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover"/>
-    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Nunito:wght@300;400;600display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Nunito:wght@300;400;600&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="/style.css?v={% version %}"/>
     {% block head %}{% endblock %}
     <script src="/js/alpine.js?v={% version %}"></script>
