--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -10,8 +10,13 @@
     {% endif %}
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="theme-color" content="#fff1a5"/>
     <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Nunito:wght@300;400;600&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="/style.css?v={% version %}"/>
+    <link rel="shortcut icon" href="/static/imgs/favicon.ico"/>
+    <link rel="apple-touch-icon" href="/static/imgs/logo192.png"/>
+    <link rel="manifest" href="/manifest.webmanifest"/>
     {% block head %}{% endblock %}
     <script src="/js/alpine.js?v={% version %}"></script>
   </head>
@@ -24,5 +29,11 @@
         {{ content | safe }}
       {% endblock %}
     </div>
+    <script>
+      if ("serviceWorker" in navigator) 
+        navigator
+          .serviceWorker
+          .register("/service-worker.js");
+    </script>
   </body>
 </html>
