fix(pagination): add pagination on blog posts

--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -22,7 +22,7 @@
   <body>
     <div class="container relative mx-auto min-h-screen font-body pb-10 sm:px-2 sm:pb-20">
       <h1 class="bg-transparent text-2xl mb-6 sm:text-4xl sm:mb-20">
-        <a href="/" class="logo p-3 hover:text-black hover:bg-yellow border-b-0">skiN[deeP]</a>
+        <a href="/" class="unstyled-a p-3 hover:text-black hover:bg-yellow">skiN[deeP]</a>
       </h1>
       {% block content %}
         {{ content | safe }}
