--- a/poems.njk
+++ b/poems.njk
@@ -1,9 +1,9 @@
 ---
 pagination:
-    data: articles
+    data: poems
     size: 5
 description: A blog where I write whatever passes through my mind...
-finalText: you’ve reached the end of my journey…
+finalText: as roses are red, you've reached now the end…
 ---
 
 {% extends "_includes/lists.njk" %}
