--- a/stories.njk
+++ b/stories.njk
@@ -1,9 +1,9 @@
 ---
 pagination:
-    data: articles
+    data: stories
     size: 5
 description: A blog where I write whatever passes through my mind...
-finalText: you’ve reached the end of my journey…
+finalText: there are no more stories to tell...
 ---
 
 {% extends "_includes/lists.njk" %}
