--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -22,10 +22,10 @@
   <body>
     <div class="container relative mx-auto min-h-screen font-body pb-10 sm:px-2 sm:pb-20">
       <div class="flex items-center mb-6 sm:mb-20">
-        <h1 class="hidden bg-transparent text-2xl sm:text-4xl sm:block">
+        <h1 class="hidden bg-transparent text-4xl sm:block">
           <a href="/" class="unstyled-a p-3 hover:text-black hover:bg-yellow">skiN[deeP]</a>
         </h1>
-        <h1 class="bg-transparent text-2xl sm:text-4xl pl-0 pr-0 sm:hidden">
+        <h1 class="bg-transparent text-4xl pl-0 pr-0 sm:hidden">
           <a href="/" class="unstyled-a p-3 hover:text-black hover:bg-yellow">[]</a>
         </h1>
         <ul class="flex flex-grow justify-start mt-2 ml-2">
